--- a/Duffio/duffio/ani/templates/ani/index.html
+++ b/Duffio/duffio/ani/templates/ani/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<meta name="description" content="最新技術と自然との調和を目指す">
-	<meta name="viewport" content="width=device-width">
-	<title>SAMPLE COMPANY | 最新技術と自然との調和を目指す</title>
+	<title>ダフィオ記念館</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
@@ -15,7 +12,7 @@
 
 		<div id="sidebar">
 			<div id="sidebarWrap">
-				<h1><img src="images/logo.png" width="87" height="25" alt="logo"></h1>
+				<h1><img src="images/IMG_5203.JPG" width="87" height="25" alt="logo"></h1>
 				<nav id="mainnav">
 					<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 					<div class="panel">
