SNSリンクの解除とメイン写真の変更

--- a/Duffio/duffio/ani/templates/ani/index.html
+++ b/Duffio/duffio/ani/templates/ani/index.html
@@ -12,23 +12,16 @@
 
 		<div id="sidebar">
 			<div id="sidebarWrap">
-				<h1><img src="images/IMG_5203.JPG" width="87" height="25" alt="logo"></h1>
-				<nav id="mainnav">
+					<nav id="mainnav">
 					<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 					<div class="panel">
 						<ul>
 							<li><a href="#top">TOP</a></li>
-							<li><a href="#sec01">MESSAGE</a></li>
-							<li><a href="#sec02">GALLERY</a></li>
-							<li><a href="#sec03">BRAND</a></li>
+							<li><a href="#sec01">日記</a></li>
+							<li><a href="#sec02">アルバム</a></li>
+							<li><a href="#sec03">ダフィオ占い</a></li>
 							<li><a href="#sec04">PROJECT</a></li>
 							<li><a href="#sec05">COMPANY</a></li>
-						</ul>
-						<ul id="sns">
-							<li><a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
-							<li><a href="#" target="_blank"><img src="images/iconYouTube.png" width="20" height="20" alt="You Tube"></a></li>
 						</ul>
 					</div>
 				</nav>
@@ -36,7 +29,7 @@
 		</div>
 
 		<div id="content">
-			<p id="mainImg"><img src="images/mainImg.jpg" alt=""></p>
+			<p id="mainImg"><img src="image/IMG_5203.JPG" alt=""></p>
 			<!-- MESSAGE -->
 			<section id="sec01">
 				<header>
