--- a/Duffio/duffio/ani/templates/ani/base.html
+++ b/Duffio/duffio/ani/templates/ani/base.html
@@ -10,8 +10,7 @@
 	<script src="js/script.js"></script>
 </head>
 
-<body id="top">
+<body>
 	{%block content %}
     {% endblock %}
 </body>
-</html>
