--- a/Duffio/duffio/ani/templates/ani/diary_delete.html
+++ b/Duffio/duffio/ani/templates/ani/diary_delete.html
@@ -1,23 +1,22 @@
 {% extends 'diary/base.html' %}
-
 {% block content %}
 <form action="" method="POST">
-    <table class="tabel">
+    <table class="table">
         <tr>
             <th>タイトル</th>
-            <td>{{ form.title }}</td>
+            <td>{{ day.title }}</td>
         </tr>
         <tr>
             <th>本文</th>
-            <td>{{ form.text }}</td>
+            <td>{{ day.text }}</td>
         </tr>
         <tr>
             <th>日付</th>
-            <td>{{ form.date }}</td>
+            <td>{{ day.date }}</td>
         </tr>
     </table>
-
-    <button type="submit" class="btn btn-primary">送信</button>
+    <p>このデータを削除する</p>
+    <button type="submit" class="btn btn-primary">削除</button>
     {% csrf_token %}
 </form>
 {% endblock %}
