--- a/Duffio/duffio/ani/templates/ani/top.html
+++ b/Duffio/duffio/ani/templates/ani/top.html
@@ -2,25 +2,7 @@
 
 
 {% block content %}
-<h1>ダフィオ記念館</h1>
-<body id="top">
-	<div id="wrapper">
-		<div id="sidebar">
-			<div id="sidebarWrap">
-				<nav id="mainnav">
-					<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
-					<div class="panel">
-						<ul>
-							<li><a href="{% url 'ani:top' %}">TOP</a></li>
-							<li><a href="{% url 'ani:profile' %}">自己紹介</a></li>
-							<li><a href="{% url 'ani:diary' %}">日記</a></li>
-							<li><a href="{% url 'ani:album' %}">アルバム</a></li>
-							<li><a href="{% url 'ani:fortune' %}">ダフィオ占い</a></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-	</div>
-</body>
+
+<body></body>
+
 {% endblock %}
