--- a/Duffio/duffio/ani/templates/ani/base.html
+++ b/Duffio/duffio/ani/templates/ani/base.html
@@ -4,6 +4,7 @@
     <!-- metaタグはheadタグの中に記載する。コンテンツ上では表示されない。
 		headタグ内には検索エンジンやブラウザのための情報を記載 -->
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--descriptionには記事の要約を記載する-->
 	<meta name="description" content="ダフィオのための特設サイト">
 	<!--viewportはモバイル端末での表示をブラウザに指示するためのメタタグ、以下はGoogle推奨の記述-->
@@ -12,50 +13,33 @@
 	<title>ダフィオ記念館</title>
 	<!--linkタグは「そのページ」と「外部のファイルやページ」を関連づけるためのもの
 	ここではrelでファイルとの関係性を示し、media=allで全てのメディアに適用、
-	hrefでファイルがある場所を指定している-->
+	hrefでファイルがある場所を指定している。外部のcssファイルを参照している-->
 	<link rel="stylesheet" media="all" href="css/style.css">
+	<link rel="stylesheet" href="css/slide.css">
 	<!--scriptでjavascriptを埋め込む。srcはsourceの意味で情報元を指す-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script src="js/script.js"></script>
-	<style>
-	.container {
-		width: 90%;
-		margin: 0 auto;
-		display: flex;
-		justify-content: space-between;
-	}
-	.ul{
-		list-style: none;
-	}
-
-	.list{
-		list-style: none;
-		right: 0px;
-		display: flex;
-		writing-mode: vertical-rl;
-	}
-
-	.item{
-		padding:20px 0;
-	}
-	</style>
-    </head>
-	<body>
-		<h1>ダフィオ記念館</h1>
-			<div class="wrapper">
-						<ul class="list">
-							<li class = "item"><a href="{% url 'ani:top' %}">TOP</a></li>
-							<li class = "item"><a href="{% url 'ani:profile' %}">自己紹介</a></li>
-							<li class = "item"><a href="{% url 'ani:diary' %}">日記</a></li>
-							<li class = "item"><a href="{% url 'ani:album' %}">アルバム</a></li>
-							<li class = "item"><a href="{% url 'ani:fortune' %}">ダフィオ占い</a></li>
-						</ul>
-				
+	<script src="js/openclose.js"></script>
+	<script src="js/fixmenu.js"></script>
+	<script src="js/fixmenu_pagetop.js"></script>
+	<script src="js/ddmenu_min.js"></script>
+	</head>
+	<div id="wrapper">
+		<div id="sidebar">
+			<div id="sidebarWrap">
+				<h1>ダフィオ記念館</h1>
+				<nav id="mainnav">
+					<div class="panel">
+					<ul>
+						<li><a href="{% url 'ani:top' %}">TOP</a></li>
+						<li><a href="{% url 'ani:profile' %}">自己紹介</a></li>
+						<li><a href="{% url 'ani:diary' %}">日記</a></li>
+						<li><a href="{% url 'ani:album' %}">アルバム</a></li>
+						<li><a href="{% url 'ani:fortune' %}">ダフィオ占い</a></li>
+					</ul>
 			</div>
-	</body>
+	<body>
 	{% block content %}
     {% endblock %}
-
+	</body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
